--- a/tex/latex/QCYPreamable/QCYPreamable.sty
+++ b/tex/latex/QCYPreamable/QCYPreamable.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}[2019/05/03] % 2019/05/03 is need for \NewDocumentEnvironment
-\ProvidesPackage{QCYPreamable}[2024/01/14 QianCY preamable v0.6]
+\ProvidesPackage{QCYPreamable}[2025/04/09 QianCY preamable v0.7]
 
 % 待了解：tabu
 
@@ -53,7 +53,6 @@
 \ProcessKeysOptions { QCYPreamable }
 
 \RequirePackage{amsmath,amsthm,amssymb,mathtools} % Basic Packages
-\RequirePackage{regexpatch} % 替代etoolbox提供各种钩子。
 
 % Fonts
 \RequirePackage{mathrsfs} % 花体 \mathscr
@@ -63,7 +62,7 @@
 % Labeling
 % 为了造case环境
 \@ifclassloaded{beamer}{
-    \RequirePackage[loadonly]{enumitem}
+    \RequirePackage[loadonly]{enumitem} % beamer 加载了 enumerate 包
 }{
     \RequirePackage{enumitem}
 }
@@ -107,48 +106,49 @@
     \crefname{thmenumi}{item}{items}
     \crefalias{thmenumii}{thmenumi}
 
-	% this is the hack to make cref work with enumitem
+    % this is the hack to make cref work with enumitem
     \let\cref@old@resetby\cref@resetby
-	\def\cref@resetby#1#2{%
-		\let#2\relax%
-		\def\@eatall##1\relax{}%
-		\def\@tmpcode##1,##2;{%
-			\let\qcy@next\@eatall% \@next is defined by other packages, so we use \qcy@next instead, where qcy is my name
-			\ifx,##1,\else
-				\ifnum\pdfstrcmp{#1}{##1}=\z@
-					\message{Enter @tmpcode, input=##1,##2; command=#1^^J}% only for debugging
-					\def#2{##2}%
-				\else
-					\let\qcy@next\@tmpcode
-				\fi
-			\fi
-			\qcy@next
-		}%
-		\expandafter\@tmpcode\cref@resetby@list,;\relax
-		\ifx#2\relax%
-			\cref@old@resetby{#1}{#2}%
-		\fi
-	}
+    \def\cref@resetby#1#2{%
+        \let#2\relax%
+        \def\@eatall##1\relax{}%
+        \def\@tmpcode##1,##2;{%
+            \let\qcy@next\@eatall% \@next is defined by other packages, so we use \qcy@next instead, where qcy is my name
+            \ifx,##1,\else
+                \ifnum\pdfstrcmp{#1}{##1}=\z@
+                    \message{Enter @tmpcode, input=##1,##2; command=#1^^J}% only for debugging
+                    \def#2{##2}%
+                \else
+                    \let\qcy@next\@tmpcode
+                \fi
+            \fi
+            \qcy@next
+        }%
+        \expandafter\@tmpcode\cref@resetby@list,;\relax
+        \ifx#2\relax%
+            \cref@old@resetby{#1}{#2}%
+        \fi
+    }
 
-	% Now redefine \label so that it behaves like \label in `subcaption' package and allows nesting of `thmenum' environment
-	%%begin novalidate % 关闭Overleaf代码检查
-	\xpatchcmd{\begin}{\begingroup}{\begingroup\let\@parentenvir\@currenvir}{}{}
-	%%end novalidate
-	\def\deal@cref@currentlabel[#1][#2][#3]#4\relax{[#1][#2][#3]\@currentlabel}%
-	\providecommand{\setsublabel}[1][theorem]{%
-		\let\old@label\label@optarg
-		\let\thmenum@parent\@parentenvir
-		\renewcommand{\label}[2][\thmenum@parent]{%
-			\old@label[#1]{sub@##2}%
-			\begingroup
-				\let\old@currentlabel\@currentlabel
-				\edef\@currentlabel{\deal@currentlabel{#1}\old@currentlabel}%
-				\let\old@currentlabel\cref@currentlabel
-				\edef\cref@currentlabel{\expandafter\deal@cref@currentlabel\old@currentlabel\relax}%
-				\old@label[#1]{##2}%
-			\endgroup
-		}%
-	}
+    % Now redefine \label so that it behaves like \label in `subcaption' package and allows nesting of `thmenum' environment
+    \AddToHook{env/thmenum/before}{% 首次进入 thmenum 环境时，设置 \thmenum@parent 用来保存父环境的标签
+        \ifdefined \thmenum@parent \else
+            \let\thmenum@parent\@currenvir
+        \fi
+    }
+    \def\deal@cref@currentlabel[#1][#2][#3]#4\relax{[#1][#2][#3]\@currentlabel}%
+    \providecommand{\setsublabel}[1][theorem]{%
+        \let\old@label\label@optarg
+        \renewcommand{\label}[2][\thmenum@parent]{%
+            \old@label[##1]{sub@##2}%
+            \begingroup
+                \let\old@currentlabel\@currentlabel
+                \edef\@currentlabel{\deal@currentlabel{#1}\old@currentlabel}%
+                \let\old@currentlabel\cref@currentlabel
+                \edef\cref@currentlabel{\expandafter\deal@cref@currentlabel\old@currentlabel\relax}%
+                \old@label[##1]{##2}%
+            \endgroup
+        }%
+    }
 }{
     \providecommand{\setsublabel}[1][theorem]{%
         \let\old@label\label
